# Loch

./: README.md  pyproject.toml  temp.py
archive_src/loch/: constants.py  databases.py  main.py
archive_src/oldloch/: __init__.py  filesystem.py  main.py
docs/vibe_coding/: d3js_network_graph.md  interactive_file_selector.md
src/loch/: cli.py  constants.py  databases.py  filesystem.py  llm_prompts.py  main.py  search.py  semantic_embed_models.py
src/loch/algs/: __init__.py  entire_doc_vector_search.py  fts_bm25.py  full_doc_vector_search.py  llm_auto_tagging.py  llm_knowledge_graph.py  llm_question_answering.py  pyramid_search.py  semantic_code_search.py  semantic_search.py
src/loch/algs/assets/llm_knowledge_graph/: backup_explore_knowledge_graph.html  (+1 more)
src/loch/common/data_structures/: bimap.py
src/loch/core/: __init__.py  loch_cleanup.py  loch_explore.py  loch_init.py  loch_query.py
src/loch/data_models/: __init__.py  llm_client_interface.py  project_config.py  query_algorithm.py  text_chunker.py
src/loch/data_processing/text_chunking/: __init__.py  data_models.py  fixed_size.py  no_chunking.py  semantic.py  split_by_regex.py
src/loch/databases/: vector_db.py
src/loch/db/vector_db/: client.py
src/loch/language_models/: llm_client.py  semantic_vector_embedding.py
src/loch/llm/: client.py  tokenizers.py
src/loch/llm/embeddings/: model2vec.py
src/loch/llm/prompts/: __init__.py  extract_semantic_triples.py  process_text.py  query_processed_file_contents.py
src/loch/llm/tasks/: __init__.py  extract_semantic_triples.py  process_text.py
src/loch/tui/: __init__.py  file_selector.py  multi_select.py  single_select.py  user_set_config.py
src/loch/utils/: http.py  logging_utils.py
tests/: test_list_filepaths.py
