[project]
name = "loch"
version = "0.1.0"
description = "A python CLI tool enabling local search over files"
readme = "README.md"
authors = [{ name = "J-sephB-lt-n", email = "joseph.jazz.bolton@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["lancedb>=0.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
loch = "loch.cli:main"
