[project]
name = "loch"
version = "0.1.0"
description = "A python CLI tool enabling local search over files"
readme = "README.md"
authors = [{ name = "J-sephB-lt-n", email = "joseph.jazz.bolton@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["lancedb>=0.19.0", "sentence-transformers>=3.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["mypy>=1.15.0", "pylint>=3.3.4", "ruff>=0.9.9"]
dev = ["ipython>=9.0.0"]

[project.scripts]
loch = "loch.main:main"
