[project]
name = "loch"
version = "0.1.0"
description = "A python CLI tool enabling local search over files"
readme = "README.md"
authors = [{ name = "J-sephB-lt-n", email = "joseph.jazz.bolton@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "blessed>=1.20.0",
  "httpx>=0.28.1",
  "huggingface-hub>=0.29.1",
  "jinja2>=3.1.5",
  "lancedb>=0.19.0",
  "model2vec>=0.4.1",
  "openai>=1.75.0",
  "pydantic>=2.10.6",
  "tantivy>=0.22.0",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["mypy>=1.15.0", "pylint>=3.3.4", "ruff>=0.9.9"]
dev = ["ipython>=9.0.0", "wat-inspector>=0.4.3"]

[project.scripts]
loch = "loch.main:main"
